bk_ida/gccida/c1/find_reloads_address_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5632:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5626:10: error: conflicting types for 'find_reloads_address_1'
__int64  find_reloads_address_1( 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:265:12: note: previous declaration is here
static int find_reloads_address_1 PARAMS ((enum machine_mode, rtx, int, rtx *,
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5654:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5660:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v35; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5661:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v36; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5680:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5680:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5683:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5689:4: error: expected ';' after expression
rtx memloc; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5689:5: error: use of undeclared identifier 'memloc'; did you mean 'malloc'?
rtx memloc; // rbp 
    ^~~~~~
    malloc
/usr/include/malloc.h:38:14: note: 'malloc' declared here
extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5690:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v65; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5691:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v66; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5692:4: error: expected ';' after expression
rtx v67; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5692:5: error: use of undeclared identifier 'v67'
rtx v67; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5702:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v77; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5705:4: error: expected ';' after expression
rtx v80; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5705:5: error: use of undeclared identifier 'v80'
rtx v80; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5720:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v95; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/reload.c:5721:6: error: use of undeclared identifier 'v96'
rtx *v96; // rdx 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address_1/src/obj/reload.o] Error 1
